PPC64: fix crashes after JDK-8284161 (virtual threads preview)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 19
    • Affects Version/s: 19
    • Component/s: hotspot
    • 19
    • b22
    • ppc

      After integration of JDK-8284161 the ppc port is broken. There are various crashes running `java -version` with a devkit build and during the build the bootstrap vm crashes as well.

            Assignee:
            Richard Reingruber
            Reporter:
            Richard Reingruber
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: