8286446: PPC64: fix crashes after JDK-8284161 (virtual threads preview)

Reviewed-by: mdoerr, coleenp, shade